# looptrace-loci-vis

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  shell.nix
.github/workflows/: ci.yaml  format.yaml  lint.yaml  tests.yaml
docs/: README.md  development.md  using-the-plugin.md
looptrace_loci_vis/: __init__.py  _const.py  _parse_new_style_with_header.py  _parse_old_style_no_header.py  _parse_old_style_without_header.py  _types.py  napari.yaml  point_record.py  points_parser.py  reader.py
looptrace_loci_vis/examples/: P0001.qcfail.csv  P0001.qcpass.csv  README.md
tests/: test_locus_points_smoke.py  test_manifest_validation.py
